--- a/templates/commande/_form.html.twig
+++ b/templates/commande/_form.html.twig
@@ -43,8 +43,8 @@
 </div>
 
 <div class="form-commande">
-	{{ form_label(form.statutReservation, null, {'label_attr': {'hidden': true, 'style': 'margin-left: 500px;'}}) }}
-	{{ form_widget(form.statutReservation, {'attr': {'class': 'form-control', 'hidden': true, 'style': 'width: 30%; margin-left: 500px;'}, 'value': commande.etat}) }}
+	{{ form_label(form.etat, null, {'label_attr': {'hidden': true, 'style': 'margin-left: 500px;'}}) }}
+	{{ form_widget(form.etat, {'attr': {'class': 'form-control', 'hidden': true, 'style': 'width: 30%; margin-left: 500px;'}, 'value': commande.etat}) }}
 </div>
 
 <div class="form-commande">
