--- a/templates/home/forgetPassword.html.twig
+++ b/templates/home/forgetPassword.html.twig
@@ -1,18 +1,98 @@
-{% extends 'baseFront.html.twig' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block title %}Register{% endblock %}
+    <head>
+        <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <title>
+            {% block title %}
+                Elbadli
+            {% endblock %}
+        </title>
+        <meta content="" name="description">
+        <meta content="" name="keywords">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-{% block body %}
-    <div style="margin-top: 200px;margin-bottom: 200px;margin-left: 500px;margin-right: 500px">
-        <h1>Forget password</h1>
+        <!-- Favicons -->
+        <link href="{{asset('Front/img/elbaldi.jpg')}}" rel="icon">
+        <link
+        href="{{asset('Front/img/elbaldi.jpg')}}" rel="apple-touch-icon">
 
-        {{ form_start(form,{'attr': {'novalidate': 'novalidate'}} ) }}
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+        {% block css%}
+            <!-- Vendor CSS Files -->
+            <link href="{{asset('Front/vendor/animate.css/animate.min.css ')}}" rel="stylesheet">
+            <link href="{{asset('Front/vendor/bootstrap/css/bootstrap.min.css ')}}" rel="stylesheet">
+            <link href="{{asset('Front/vendor/bootstrap-icons/bootstrap-icons.css ')}}" rel="stylesheet">
+            <link href="{{asset('Front/vendor/boxicons/css/boxicons.min.css ')}}" rel="stylesheet">
+            <link href="{{asset('Front/vendor/glightbox/css/glightbox.min.css ')}}" rel="stylesheet">
+            <link href="{{asset('Front/vendor/remixicon/remixicon.css ')}}" rel="stylesheet">
+            <link
+            href="{{asset('Front/vendor/swiper/swiper-bundle.min.css ')}}" rel="stylesheet">
 
-        {{ form_row(form.numtel ,{'label': "enter your number"} ) }}
+            <!-- Template Main CSS File -->
+            <link
+            href="{{asset('Front/css/style.css')}}" rel="stylesheet">
+
+        <!-- =======================================================
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  * Template Name: Sailor
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  * Author: BootstrapMade.com
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  * License: https://bootstrapmade.com/license/
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  ======================================================== -->
+        {% endblock %}
+        <style>
+            body {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .logo {
+                display: flex;
+                align-items: center;
+            }
+
+            .logo img {
+                width: 50px;
+                margin-right: 20px;
+            }
+
+            .logo a {
+                color: #9a000a; /* Changer la couleur du texte ici */
+                font-size: 36px;
+                font-weight: bold;
+                text-decoration: none;
+            }
+
+            .custom-logo {
+                max-width: 500%;
+            }
+            /* Centrer l'image horizontalement */
+            img {
+                display: block;
+                margin: 0 auto;
+                width: 80%;
+            }
+        </style>
+
+    </head>
+    {% block body %}<img src="{{asset('Front/img/elbaldi.jpg')}}" alt="Logo" style="display: block; margin: auto; margin-top: 50px; width: 200px;">
+        <br><br>
+        <div class="col-lg-4" style="margin-bottom: 100px">
+            <h1>Mot de passe oublié !!</h1>
+            <br>
+            {{ form_start(form,{'attr': {'novalidate': 'novalidate'}}
+            ) }}
+
+            {{ form_row(form.numtel ,{'label': "Entrez votre numéro"} ) }}
 
 
-        <button style="max-width: 100px" type="submit" class="form-control">save</button>
-        {{ form_end(form) }}
-    </div>
+            <button style="background-color: #9a000a; max-width: 150px; display:block; margin: auto;" type="submit" class="form-control">Sauvegarder</button>
+            {{ form_end(form) }}
+        </div>
 
-{% endblock %}
+    {% endblock %}
+</html>
