--- a/templates/reservation/_form2.html.twig
+++ b/templates/reservation/_form2.html.twig
@@ -21,6 +21,6 @@
 </div>
 <br>
 <div class="form-reservation">
-	<button class="btn btn-primary"style="margin-left: 550px;">{{ button_label|default('Enregistrer') }}</button>
+	<button class="btn btn-success custom-btn"style="margin-left: 550px;">{{ button_label|default('Enregistrer') }}</button>
 </div>
 {{ form_end(form) }}
