--- a/templates/bonplan/indexFront.html.twig
+++ b/templates/bonplan/indexFront.html.twig
@@ -11,14 +11,14 @@
 {% block body %}
 
     <div class="container">
-        <h1>Bonplan index</h1>
+        <h1>Liste des bons plans</h1>
        
         <hr>
 <div class="nk-widget">
                                     <div class="nk-widget-content">
                                         <form action="#" class="nk-form nk-form-style-1" novalidate="novalidate">
                                             <div class="input-group">
-                                                <input type="text" class="form-control" placeholder="Type something..." id="search" >
+                                                <input type="text" class="form-control" placeholder="Chercher..." id="search" >
                                                 <button class="nk-btn nk-btn-color-main-1"><span class="ion-search"></span><i class="bi bi-search"></i></button>
                                             </div>
                                         </form>
