--- a/templates/event/showFront.html.twig
+++ b/templates/event/showFront.html.twig
@@ -45,19 +45,35 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="{{asset('Front1/img/logo.png ')}}" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a href="index.html" class="active">Profil</a></li>
+                     <nav id="navbar" class="navbar">
+                    <ul>
+                        <li>
+                            <a href="{{path('profile')}}">Profil</a>
+                        </li>
 
-           <li><a href="services.html">Produits</a></li>
-          <li><a href="services.html">Bons plans</a></li>
-          <li><a href="portfolio.html">Evènements</a></li>
-          <li><a href="pricing.html">Quiz</a></li>
-         
-          <li><a href="index.html" class="getstarted">Déconnexion</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+                        <li>
+                            <a href="{{path('app_produit_indexFront')}}">Produits</a>
+                        </li>
+                        <li>
+                            <a href="{{path('app_bonplan_indexFront')}}">Bons plans</a>
+                        </li>
+                        <li>
+                            <a href="{{path('app_event_front')}}">Evènements</a>
+                        </li>
+                        <li>
+                            <a href="{{path('app_quiz_indexc')}}">Quiz</a>
+
+                        </li>
+ <li>
+                            <a href="{{path('app_panier_show_front', {'idPanier': 21 })}}">Mon panier</a>
+
+                        </li>
+                        <li>
+                            <a href="{{path('app_logout')}}">Déconnexion</a>
+                        </li>
+                    </ul>
+                    <i class="bi bi-list mobile-nav-toggle"></i>
+                </nav>
 
     </div>
   </header><!-- End Header -->
@@ -129,15 +145,7 @@
 	</div>
 	<!-- //banner -->
 	<!-- breadcrumbs -->
-	<div class="breadcrumb_dress">
-		<div class="container">
-			<ul>
-				<li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a>
-					<i>/</i></li>
-				<li>Evenement</li>
-			</ul>
-		</div>
-	</div>
+	
 	<!-- //breadcrumbs -->
 <div style="margin: 8px auto; display: block; text-align:center;">
 
@@ -171,7 +179,7 @@
 						</div>
 						<p class="mt-3">{{event.descriptionEvent}}</p>
 					
-						<a id="test{{results[loop.index - 1]}}"href="{{ path('app_participation_new1',{'idEvent': event.idEvent,'idClient': client.idClient}) }}" class="btn btn-style mt-4">Inscrire</a>
+						<a id="test{{results[loop.index - 1]}}"href="{{ path('app_participation_new1',{'idEvent': event.idEvent,'idClient': client.idClient}) }}" class="btn btn-style mt-4">Participer</a>
 					</div>
 					<div class="col-lg-6 right-img">
 					
