--- a/templates/panier/front.html.twig
+++ b/templates/panier/front.html.twig
@@ -1,121 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
-		<meta content="width=device-width, initial-scale=1.0" name="viewport">
-		<title>
-			{% block title %}
-				Elbadli
-			{% endblock %}
-		</title>
-		<meta content="" name="description">
-		<meta content="" name="keywords">
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <head>
+        <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <title>
+            {% block title %}
+                Elbadli
+            {% endblock %}
+        </title>
+        <meta content="" name="description">
+        <meta content="" name="keywords">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-		<!-- Favicons -->
-		<link href="{{asset('Front/img/elbaldi.jpg')}}" rel="icon">
-		<link
-		href="{{asset('Front/img/elbaldi.jpg')}}" rel="apple-touch-icon">
+        <!-- Favicons -->
+        <link href="{{asset('Front/img/elbaldi.jpg')}}" rel="icon">
+        <link
+        href="{{asset('Front/img/elbaldi.jpg')}}" rel="apple-touch-icon">
 
-		<!-- Google Fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-		{% block css%}
-			<!-- Vendor CSS Files -->
-			<link href="{{asset('Front/vendor/animate.css/animate.min.css ')}}" rel="stylesheet">
-			<link href="{{asset('Front/vendor/bootstrap/css/bootstrap.min.css ')}}" rel="stylesheet">
-			<link href="{{asset('Front/vendor/bootstrap-icons/bootstrap-icons.css ')}}" rel="stylesheet">
-			<link href="{{asset('Front/vendor/boxicons/css/boxicons.min.css ')}}" rel="stylesheet">
-			<link href="{{asset('Front/vendor/glightbox/css/glightbox.min.css ')}}" rel="stylesheet">
-			<link href="{{asset('Front/vendor/remixicon/remixicon.css ')}}" rel="stylesheet">
-			<link
-			href="{{asset('Front/vendor/swiper/swiper-bundle.min.css ')}}" rel="stylesheet">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+        {% block css%}
+            <!-- Vendor CSS Files -->
+            <link href="{{asset('Front/vendor/animate.css/animate.min.css ')}}" rel="stylesheet">
+            <link href="{{asset('Front/vendor/bootstrap/css/bootstrap.min.css ')}}" rel="stylesheet">
+            <link href="{{asset('Front/vendor/bootstrap-icons/bootstrap-icons.css ')}}" rel="stylesheet">
+            <link href="{{asset('Front/vendor/boxicons/css/boxicons.min.css ')}}" rel="stylesheet">
+            <link href="{{asset('Front/vendor/glightbox/css/glightbox.min.css ')}}" rel="stylesheet">
+            <link href="{{asset('Front/vendor/remixicon/remixicon.css ')}}" rel="stylesheet">
+            <link
+            href="{{asset('Front/vendor/swiper/swiper-bundle.min.css ')}}" rel="stylesheet">
 
-			<!-- Template Main CSS File -->
-			<link
-			href="{{asset('Front/css/style.css')}}" rel="stylesheet">
+            <!-- Template Main CSS File -->
+            <link
+            href="{{asset('Front/css/style.css')}}" rel="stylesheet">
 
-		<!-- =======================================================
-																				  * Template Name: Sailor
-																				  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-																				  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
-																				  * Author: BootstrapMade.com
-																				  * License: https://bootstrapmade.com/license/
-																				  ======================================================== -->
-		{% endblock %}
-		<style>
-			.logo {
-				display: flex;
-				align-items: center;
-			}
+        <!-- =======================================================
+                                                                                          * Template Name: Sailor
+                                                                                          * Updated: Mar 10 2023 with Bootstrap v5.2.3
+                                                                                          * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
+                                                                                          * Author: BootstrapMade.com
+                                                                                          * License: https://bootstrapmade.com/license/
+                                                                                          ======================================================== -->
+        {% endblock %}
+        <style>
+            .logo {
+                display: flex;
+                align-items: center;
+            }
 
-			.logo img {
-				width: 50px;
-				margin-right: 20px;
-			}
+            .logo img {
+                width: 50px;
+                margin-right: 20px;
+            }
 
-			.logo a {
-				color: #9a000a; /* Changer la couleur du texte ici */
-				font-size: 36px;
-				font-weight: bold;
-				text-decoration: none;
-			}
-			.custom-logo {
-				max-width: 500%;
-			}
-		</style>
-	</head>
+            .logo a {
+                color: #9a000a; /* Changer la couleur du texte ici */
+                font-size: 36px;
+                font-weight: bold;
+                text-decoration: none;
+            }
+            .custom-logo {
+                max-width: 500%;
+            }
+        </style>
+    </head>
 
-	<body>
+    <body>
 
-		<!-- ======= Header ======= -->
-		<header id="header" class="fixed-top d-flex align-items-center">
-			<div class="container d-flex align-items-center">
+        <!-- ======= Header ======= -->
+        <header id="header" class="fixed-top d-flex align-items-center">
+            <div class="container d-flex align-items-center">
 
-				<h1 class="logo me-auto">
-					<a href="{{path('app_produit_indexFront')}}">
+                <h1 class="logo me-auto">
+                    <a href="{{path('app_produit_indexFront')}}">
 
-						<img src="{{asset('Front/img/elbaldi.jpg')}}" alt="Logo Elbaldi" class="img-fluid custom-logo">
-						Elbaldi
-					</a>
-				</h1>
+                        <img src="{{asset('Front/img/elbaldi.jpg')}}" alt="Logo Elbaldi" class="img-fluid custom-logo">
+                        Elbaldi
+                    </a>
+                </h1>
 
-				<nav id="navbar" class="navbar">
-					<ul>
-						<li>
-							<a href="#" class="active">Profil</a>
-						</li>
+                <nav id="navbar" class="navbar">
+                    <ul>
+                        <li>
+                            <a href="{{path('profile')}}">Profil</a>
+                        </li>
 
-						<li>
-							<a href="{{path('app_produit_indexFront')}}">Produits</a>
-						</li>
-						<li>
-							<a href="{{path('app_bonplan_indexFront')}}">Bons plans</a>
-						</li>
-						<li>
-							<a href="portfolio.html">Evènements</a>
-						</li>
-						<li>
-						<a href="{{path('app_quiz_indexc')}}">Quiz</a>
-							
-						</li>
+                        <li>
+                            <a href="{{path('app_produit_indexFront')}}">Produits</a>
+                        </li>
+                        <li>
+                            <a href="{{path('app_bonplan_indexFront')}}">Bons plans</a>
+                        </li>
+                        <li>
+                            <a href="{{path('app_event_front')}}">Evènements</a>
+                        </li>
+                        <li>
+                            <a href="{{path('app_quiz_indexc')}}">Quiz</a>
 
-						<li>
-							<a href="index.html" class="getstarted">Déconnexion</a>
-						</li>
-					</ul>
-					<i class="bi bi-list mobile-nav-toggle"></i>
-				</nav>
-				<!-- .navbar -->
+                        </li>
+ <li>
+                            <a href="{{path('app_panier_show_front', {'idPanier': 21 })}}">Mon panier</a>
 
-			</div>
-		</header>
-		<!-- End Header -->
+                        </li>
+                        <li>
+                            <a href="{{path('app_logout')}}">Déconnexion</a>
+                        </li>
+                    </ul>
+                    <i class="bi bi-list mobile-nav-toggle"></i>
+                </nav>
+                <!-- .navbar -->
 
-		<!-- ======= Hero Section ======= -->
+            </div>
+        </header>
+        <!-- End Header -->
 
-		<div></div>
-		<hr></body>
+        <!-- ======= Hero Section ======= -->
+
+        <div></div>
+        <hr></body>
 </html></hr></section><!-- End Hero --><mainid="main"><!-- ======= Portfolio Section ======= --><section id="portfolio" class="portfolio">
 <br>
 <br>
@@ -349,7 +352,8 @@ a:hover{
 					</option>
 				</select>
 				<p>PROMO CODE</p>
-				<input id="code" placeholder="Enter your code">
+				<input name="promo" type="text"/>
+				<td><button class="btn btn-success custom-btn" href="{{ path('verifypromo', {'idPanier': panier.idPanier}) }}">Valider</button></td>
 			</form>
 			<div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
 				<div class="col">TOTAL PRIX</div>
