--- a/templates/reservation/new.html.twig
+++ b/templates/reservation/new.html.twig
@@ -25,7 +25,7 @@
 		}
 	</style>
     <h1>Ajouter une réservation</h1>
-<a href="{{ path('app_reservation_index') }}" class="btn btn-success mb-3"style="margin-left: 200px;">Retour</a>
+<a href="{{ path('app_reservation_index') }}" class="btn btn-success custom-btn mb-3"style="margin-left: 200px;">Retour</a>
 
     {{ include('reservation/_form2.html.twig') }}
 
