--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -38,12 +38,12 @@
 			href="{{asset('Back/css/style.css')}}" rel="stylesheet">
 
 		<!-- =======================================================
-																																																																																																																																																																																																																																																																																																																																																																																																												  * Template Name: NiceAdmin
-																																																																																																																																																																																																																																																																																																																																																																																																												  * Updated: Mar 09 2023 with Bootstrap v5.2.3
-																																																																																																																																																																																																																																																																																																																																																																																																												  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-																																																																																																																																																																																																																																																																																																																																																																																																												  * Author: BootstrapMade.com
-																																																																																																																																																																																																																																																																																																																																																																																																												  * License: https://bootstrapmade.com/license/
-																																																																																																																																																																																																																																																																																																																																																																																																												  ======================================================== -->
+																																																																																																																																																																																																																																																																																																																																																																																																																																				  * Template Name: NiceAdmin
+																																																																																																																																																																																																																																																																																																																																																																																																																																				  * Updated: Mar 09 2023 with Bootstrap v5.2.3
+																																																																																																																																																																																																																																																																																																																																																																																																																																				  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
+																																																																																																																																																																																																																																																																																																																																																																																																																																				  * Author: BootstrapMade.com
+																																																																																																																																																																																																																																																																																																																																																																																																																																				  * License: https://bootstrapmade.com/license/
+																																																																																																																																																																																																																																																																																																																																																																																																																																				  ======================================================== -->
 		{% endblock %}
 	</head>
 
@@ -104,10 +104,10 @@
 							</li>
 
 							<li>
-								<a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+								<a class="dropdown-item d-flex align-items-center" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{path('listAgent')}}">
 									<i class="bi bi-person-fill"></i>
 									<span>
-										Profil</span>
+										Gestion des agents</span>
 								</a>
 							</li>
 							<li>
@@ -115,9 +115,9 @@
 							</li>
 
 							<li>
-								<a class="dropdown-item d-flex align-items-center" data-bs-toggle="acceuil-nav" href="#">
+								<a class="dropdown-item d-flex align-items-center" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{path('listClient')}}">
 									<i class="bi bi-people-fill"></i>
-									<span>Gestion utilisateurs</span>
+									<span>Gestion des clients</span>
 								</a>
 							</li>
 
@@ -126,7 +126,7 @@
 							</li>
 
 							<li>
-								<a class="dropdown-item d-flex align-items-center" data-bs-toggle="acceuil-nav" href="#">
+								<a class="dropdown-item d-flex align-items-center" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{path('app_logout')}}">
 									<i class="bi bi-box-arrow-right"></i>
 									<span>Déconnexion</span>
 								</a>
@@ -206,7 +206,7 @@
 				</li>
 
 				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed"  data-bs-toggle="acceuil-nav" href="{{path('app_quiz_index')}}">
+					<a style="background-color:  #9a000a;" class="nav-link collapsed" data-bs-toggle="acceuil-nav" href="{{path('app_quiz_index')}}">
 						<i style="color: #000000;" class="bi bi-question-octagon"></i>
 						<span>Quiz</span>
 
@@ -215,7 +215,7 @@
 				</li>
 
 				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed" data-bs-target="#evenement-nav" data-bs-toggle="collapse" href="">
+					<a style="background-color:  #9a000a;" class="nav-link collapsed" data-bs-toggle="acceuil-nav" href="{{path('app_event_new1')}}">
 						<i style="color: #000000;" class="bi bi-calendar2-event"></i>
 						<span>Evènements</span>
 
