--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -36,12 +36,12 @@
 			href="{{asset('Front/css/style.css')}}" rel="stylesheet">
 
 		<!-- =======================================================
-																				  * Template Name: Sailor
-																				  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-																				  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
-																				  * Author: BootstrapMade.com
-																				  * License: https://bootstrapmade.com/license/
-																				  ======================================================== -->
+																						  * Template Name: Sailor
+																						  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+																						  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
+																						  * Author: BootstrapMade.com
+																						  * License: https://bootstrapmade.com/license/
+																						  ======================================================== -->
 		{% endblock %}
 		<style>
 			.logo {
@@ -83,7 +83,7 @@
 				<nav id="navbar" class="navbar">
 					<ul>
 						<li>
-							<a href="#" class="active">Profil</a>
+							<a href="{{path('profile')}}">Profil</a>
 						</li>
 
 						<li>
@@ -96,8 +96,8 @@
 							<a href="portfolio.html">Evènements</a>
 						</li>
 						<li>
-						<a href="{{path('app_quiz_indexc')}}">Quiz</a>
-							
+							<a href="{{path('app_quiz_indexc')}}">Quiz</a>
+
 						</li>
 
 						<li>
