--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,42 +1,125 @@
-{% extends 'baseFront.html.twig' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block title %}Register{% endblock %}
+	<head>
+		<meta charset="utf-8">
+		<meta content="width=device-width, initial-scale=1.0" name="viewport">
+		<title>
+			{% block title %}
+				Elbadli
+			{% endblock %}
+		</title>
+		<meta content="" name="description">
+		<meta content="" name="keywords">
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-{% block body %}
-    <div style="margin-top: 200px;margin-bottom: 200px;margin-left: 500px;margin-right: 500px">
-        <h1>Register</h1>
+		<!-- Favicons -->
+		<link href="{{asset('Front/img/elbaldi.jpg')}}" rel="icon">
+		<link
+		href="{{asset('Front/img/elbaldi.jpg')}}" rel="apple-touch-icon">
 
-        {{ form_start(registrationForm,{'attr': {'novalidate': 'novalidate'}}) }}
-        {{ form_widget(registrationForm.roles,{ 'attr': {'class': 'form-control' } }) }}
+		<!-- Google Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+		{% block css%}
+			<!-- Vendor CSS Files -->
+			<link href="{{asset('Front/vendor/animate.css/animate.min.css ')}}" rel="stylesheet">
+			<link href="{{asset('Front/vendor/bootstrap/css/bootstrap.min.css ')}}" rel="stylesheet">
+			<link href="{{asset('Front/vendor/bootstrap-icons/bootstrap-icons.css ')}}" rel="stylesheet">
+			<link href="{{asset('Front/vendor/boxicons/css/boxicons.min.css ')}}" rel="stylesheet">
+			<link href="{{asset('Front/vendor/glightbox/css/glightbox.min.css ')}}" rel="stylesheet">
+			<link href="{{asset('Front/vendor/remixicon/remixicon.css ')}}" rel="stylesheet">
+			<link
+			href="{{asset('Front/vendor/swiper/swiper-bundle.min.css ')}}" rel="stylesheet">
 
-        {{form_label(registrationForm.nom,'Nom : ',{'attr':{'class':'form-label'}})}}
-        {{form_widget(registrationForm.nom,{'attr':{'class':'form-control'}})}}
-        {{ form_errors(registrationForm.nom,{'attr':{'class':'form-control'}}) }}
+			<!-- Template Main CSS File -->
+			<link
+			href="{{asset('Front/css/style.css')}}" rel="stylesheet">
 
-         {{form_label(registrationForm.prenom,'Prenom : ',{'attr':{'class':'form-label'}})}}
-        {{form_widget(registrationForm.prenom,{'attr':{'class':'form-control'}})}}
-        {{ form_errors(registrationForm.prenom,{'attr':{'class':'form-control'}}) }}
+		<!-- =======================================================
+																																																																																																																				  * Template Name: Sailor
+																																																																																																																				  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+																																																																																																																				  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
+																																																																																																																				  * Author: BootstrapMade.com
+																																																																																																																				  * License: https://bootstrapmade.com/license/
+																																																																																																																				  ======================================================== -->
+		{% endblock %}
+		<style>
+			body {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+			}
 
-        {{ form_row(registrationForm.image,{ 'attr': {'class': 'form-control' } }) }}
+			.logo {
+				display: flex;
+				align-items: center;
+			}
 
-         {{form_label(registrationForm.numtel,'Numero : ',{'attr':{'class':'form-label'}})}}
-        {{form_widget(registrationForm.numtel,{'attr':{'class':'form-control'}})}}
-        {{ form_errors(registrationForm.numtel,{'attr':{'class':'form-control'}}) }}
+			.logo img {
+				width: 50px;
+				margin-right: 20px;
+			}
 
-         {{form_label(registrationForm.ville,'Ville : ',{'attr':{'class':'form-label'}})}}
-        {{form_widget(registrationForm.ville,{'attr':{'class':'form-control'}})}}
-        {{ form_errors(registrationForm.ville,{'attr':{'class':'form-control'}}) }}
+			.logo a {
+				color: #9a000a; /* Changer la couleur du texte ici */
+				font-size: 36px;
+				font-weight: bold;
+				text-decoration: none;
+			}
 
-         {{form_label(registrationForm.email,'Email : ',{'attr':{'class':'form-label'}})}}
-        {{form_widget(registrationForm.email,{'attr':{'class':'form-control'}})}}
-        {{ form_errors(registrationForm.email,{'attr':{'class':'form-control'}}) }}
+			.custom-logo {
+				max-width: 500%;
+			}
+			/* Centrer l'image horizontalement */
+			img {
+				display: block;
+				margin: 0 auto;
+				width: 80%;
+			}
+		</style>
 
-        {{ form_row(registrationForm.plainPassword,{ 'attr': {'class': 'form-control' } }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+	</head>
+	{% block body %}
 
-        <button style="max-width: 110px" type="submit" class="btn btn-lg btn-primary">Register</button>
-        <a style="color: #0a53be" href="{{ path('app_login') }}"> Login! </a>
-        {{ form_end(registrationForm) }}
-    </div>
+		<img src="{{asset('Front/img/elbaldi.jpg')}}" alt="Logo" style="display: block; margin: auto; margin-top: 50px; width: 200px;">
+		<br><br>
+		<div class="col-lg-4" style="margin-bottom: 100px">
+			<h1>S'inscrire</h1>
+			<br>
+			{{ form_start(registrationForm,{'attr': {'novalidate': 'novalidate'}}) }}
+			{{ form_widget(registrationForm.roles,{ 'attr': {'class': 'form-control' } }) }}
 
-{% endblock %}
+			{{form_label(registrationForm.nom,'Nom : ',{'attr':{'class':'form-label'}})}}
+			{{form_widget(registrationForm.nom,{'attr':{'class':'form-control'}})}}
+			{{ form_errors(registrationForm.nom,{'attr':{'class':'form-control'}}) }}
+
+			{{form_label(registrationForm.prenom,'Prénom : ',{'attr':{'class':'form-label'}})}}
+			{{form_widget(registrationForm.prenom,{'attr':{'class':'form-control'}})}}
+			{{ form_errors(registrationForm.prenom,{'attr':{'class':'form-control'}}) }}
+
+			{{ form_row(registrationForm.image,{ 'attr': {'class': 'form-control' } }) }}
+
+			{{form_label(registrationForm.numtel,'Numéro : ',{'attr':{'class':'form-label'}})}}
+			{{form_widget(registrationForm.numtel,{'attr':{'class':'form-control'}})}}
+			{{ form_errors(registrationForm.numtel,{'attr':{'class':'form-control'}}) }}
+
+			{{form_label(registrationForm.ville,'Ville : ',{'attr':{'class':'form-label'}})}}
+			{{form_widget(registrationForm.ville,{'attr':{'class':'form-control'}})}}
+			{{ form_errors(registrationForm.ville,{'attr':{'class':'form-control'}}) }}
+
+			{{form_label(registrationForm.email,'Email : ',{'attr':{'class':'form-label'}})}}
+			{{form_widget(registrationForm.email,{'attr':{'class':'form-control'}})}}
+			{{ form_errors(registrationForm.email,{'attr':{'class':'form-control'}}) }}
+
+			{{ form_row(registrationForm.plainPassword,{ 'attr': {'class': 'form-control' } }) }}
+			{{ form_row(registrationForm.agreeTerms) }}
+
+			<button type="submit" class="btn btn-success custom-btn">Register</button>
+			<a style="color: #9a000a" href="{{ path('app_login') }}">
+				Se connecter
+			</a>
+			{{ form_end(registrationForm) }}
+		</div>
+
+	{% endblock %}
+</html>
