--- a/templates/event/edit.html.twig
+++ b/templates/event/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'baseBack.html.twig' %}
 
-{% block title %}Edit Event{% endblock %}
+{% block title %}Edit Event
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Event</h1>
+	<h1>Modifier un évènement</h1>
 
-    {{ include('event/_form.html.twig', {'button_label': 'Update'}) }}
+	{{ include('event/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_event_index') }}">back to list</a>
+	<a href="{{ path('app_event_index') }}">Retour</a>
 
-    {{ include('event/_delete_form.html.twig') }}
+	{{ include('event/_delete_form.html.twig') }}
 {% endblock %}
