--- a/templates/livraison/_form.html.twig
+++ b/templates/livraison/_form.html.twig
@@ -11,7 +11,7 @@
 	{{ form_label(form.adresseLivraison) }}
 	{{form_errors(form.adresseLivraison)}}
 	{{ form_widget(form.adresseLivraison, {'attr': {'class': 'form-control'}}) }}
-	
+
 </div>
 
 <div class="form-livraison">
@@ -24,8 +24,8 @@
 	{{ form_widget(form.statusLivraison, {'attr': {'class': 'form-control'}, 'value': livraison.statusLivraison}) }}
 </div>
 
-
+<br>
 <div class="form-livraison">
-	<button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
+	<button class="btn btn-success custom-btn">{{ button_label|default('Enregistrer') }}</button>
 </div>
 {{ form_end(form) }}
